# crab_ws

./: .gitignore  .gitmodules  CONNECTING_TO_JETSON_OVER_ETHERNET.md  README.md  plotter.py  requirements.txt  udp_recv.py
.cache/clangd/index/: connector.cpp.38BBD45EA878D14F.idx  connector.hpp.43065ECC2D1B4E5F.idx  control_table.cpp.2E34807655851AED.idx  control_table.hpp.84BB10B0E3B8C51D.idx  data_types.hpp.05420501289F6976.idx  dynamixel_error.cpp.F3120392A2F1D6E1.idx  dynamixel_error.hpp.6247E3F23CBD56C4.idx  dynamixel_sdk.h.8CEC0410A59C6695.idx  dynamixel_sdk.h.AF9088B1BFF71B11.idx  get_position.hpp.B7B56BA2E8EA6DA7.idx  get_position__builder.hpp.8268759914AD7824.idx  get_position__struct.hpp.C28752486724B7E4.idx  get_position__traits.hpp.072EC79919D7C7E3.idx  get_position__type_support.hpp.A2823DA535E1E912.idx  group_bulk_read.cpp.C6976182A1989036.idx  group_bulk_read.h.5895B1406BD9D149.idx  group_bulk_read.h.B8022F6C5BBD6A57.idx  group_bulk_write.cpp.456257A2CB7083FE.idx  group_bulk_write.h.64639EB60E8859D0.idx  (+40 more)
adya_gait.bag/: adya_gait.bag_0.mcap  metadata.yaml
adya_gait2.bag/: metadata.yaml
adya_gait2/plotly-env/: pyvenv.cfg
adya_gait3_both.bag/: metadata.yaml
src/crab_control/: package.xml  setup.cfg  setup.py
src/crab_control/config/: stellar_hd.yaml  tags.yaml
src/crab_control/crab_control/: camera_node.py  imu_node.py  load_cell_node.py  servo_controller.py  servo_node.py  servo_node_sync.py
src/crab_control/launch/: april_tag.launch.py  camera_calibration.launch.py  gait_recorder.launch.py
src/crab_interfaces/: CMakeLists.txt  package.xml
(+1 files in other folders)
