<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crab_control</name>
  <version>0.0.0</version>
  <description>Code that is used to control servos on the crabbot</description>
  <maintainer email="ruthvick2005@gmail.com">odinroast</maintainer>
  <license>Apache-2.0</license>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>dynamixel_sdk</depend>
  <depend>std_srvs</depend>
  <depend>dynamixel_interfaces</depend>
  <depend>crab_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
